[package]
name = "omni-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
async = ["anchor-client/async"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anchor-client = { version = "0.30.0", features = ["async"] }
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8" 
rayon = "1.10.0"
actix-rt = "2.6"
